--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -127,7 +127,7 @@ const productSchema = isProductPage ? {
 
 <html lang="en-GB">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{fullTitle}</title>
 
