--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -127,7 +127,7 @@ const productSchema = isProductPage ? {
 
 <html lang="en-GB">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{fullTitle}</title>
 
@@ -197,25 +197,6 @@ const productSchema = isProductPage ? {
 
     input[type=number] {
         -moz-appearance:textfield; /* Firefox */
-    }
-
-    @media screen and (max-width: 474px) {
-      .related-product:nth-of-type(n+5) {
-        display:none;
-      }
-    }
-
-    @media screen and (min-width: 475px) and (max-width: 1023px) {
-      .related-product:nth-of-type(n+4),
-      .homepage-bestseller:nth-of-type(n+4) {
-        display:none;
-      }
-    }
-
-    @media screen and (min-width: 1024px) {
-      .related-product:nth-of-type(n+5) {
-        display:none;
-      }
     }
 
     #free-shipping-progress[value]::-webkit-progress-bar {
