--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -14,6 +14,13 @@ interface Props {
 const { productIDs = [], productObj, cartItemObj } = Astro.props as Props
 const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
 ---
+<style>
+    @media screen and (min-width: 475px) and (max-width: 1023px) {
+      .homepage-bestseller:nth-of-type(n+4) {
+        display:none;
+      }
+    }
+</style>
 <a href="/shop">
     <div 
         id="banner-container" 
