--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -25,7 +25,7 @@ const breadcrumbItems:ILink[] = [
 ]
 ---
 
-<style>
+<style is:global>
     @media screen and (max-width: 474px) {
       .related-product:nth-of-type(n+5) {
         display:none;
