--- a/src/components/checkout/guest/email-password.astro
+++ b/src/components/checkout/guest/email-password.astro
@@ -14,7 +14,7 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     </div>
     {acceptMembership && <div class="text-[0.7rem] tracking-widest text-gray-500 leading-5 align-middle">
         Already a member?
-        <a href={`/sign-in?rd=${encodedPathname}`} class="font-bold underline text-black">Sign In</a>
+        <a href={`/sign-in?rd=${encodedPathname}`} class="font-semibold underline text-black">Sign In</a>
     </div>}
 </div>
 <TextInput 
