--- a/src/components/track-order/order-details.astro
+++ b/src/components/track-order/order-details.astro
@@ -82,7 +82,7 @@ const { shippingAddress:{
         <hr class="border-black border-[1px]" />
         <div class="flex justify-between">
             <p class="font-semibold">Total</p>
-            <p class="text-xl font-bold">{formatPrice(subtotalBeforeDelivery + deliveryCost)}</p>
+            <p class="text-xl font-semibold">{formatPrice(subtotalBeforeDelivery + deliveryCost)}</p>
         </div>
     </div>
 </div>
