--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -43,6 +43,10 @@ const breadcrumbItems:ILink[] = [
         display:none;
       }
     }
+
+    .product-text strong {
+      font-weight: 600;
+    }
 </style>
 
 <astro-main-product 
