--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -1,4 +1,12 @@
 ---
+import '@fontsource/noto-sans-jp/300.css';
+import '@fontsource/noto-sans-jp/400.css';
+import '@fontsource/noto-sans-jp/600.css';
+import '@fontsource/noto-serif-jp/300.css';
+import '@fontsource/noto-serif-jp/400.css';
+import '@fontsource/noto-serif-jp/600.css';
+import '@fontsource/noto-serif-jp/900.css';
+import '@fontsource/yuji-syuku';
 import Header from './header/index.astro';
 import Footer from './footer/index.astro';
 import type { IShopAddressMap, IShoppingBagSidebarProp } from '@misc';
@@ -138,9 +146,9 @@ const productSchema = isProductPage ? {
 
   <script src="../../ws.ts"></script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href={`https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;600&family=Noto+Serif+JP:wght@300;400;600;900&family=Yuji+Syuku&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789£!@#$%^%26*()|,.<>?/:;'”&${isTrackOrderPage ? 'family=Libre+Barcode+128&' : ''}display=swap`} rel="stylesheet" media="screen">
+  <link href={`https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;600&family=Noto+Serif+JP:wght@300;400;600;900&family=Yuji+Syuku&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789£!@#$%^%26*()|,.<>?/:;'”&${isTrackOrderPage ? 'family=Libre+Barcode+128&' : ''}display=swap`} rel="stylesheet" media="screen"> -->
 
   <link rel="shortcut icon" href="/favicon.ico" sizes="32x32">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" id="favicon-svg">
@@ -181,6 +189,86 @@ const productSchema = isProductPage ? {
   <meta name="theme-color" content="#ffffff">
 
   <style is:global>
+    /* noto-sans-jp-latin-300-normal */
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 300;
+      src: url(@fontsource/noto-sans-jp/files/latin-300-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-sans-jp-latin-400-normal */
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(@fontsource/noto-sans-jp/files/latin-400-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-sans-jp-latin-600-normal */
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 600;
+      src: url(@fontsource/noto-sans-jp/files/latin-600-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-serif-jp-latin-300-normal */
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 300;
+      src: url(@fontsource/noto-serif-jp/files/latin-300-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-serif-jp-latin-400-normal */
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(@fontsource/noto-serif-jp/files/latin-400-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-serif-jp-latin-600-normal */
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 600;
+      src: url(@fontsource/noto-serif-jp/files/latin-600-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* noto-serif-jp-latin-900-normal */
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 900;
+      src: url(@fontsource/noto-serif-jp/files/latin-900-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* yuji-syuku-latin-400-normal */
+    @font-face {
+      font-family: 'Yuji Syuku';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(@fontsource/yuji-syuku/files/latin-400-normal.woff2) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
     .hide-scrollbar {
       scrollbar-width: none;
     }
