--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -195,7 +195,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 300;
-      src: url(@fontsource/noto-sans-jp/files/latin-300-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-sans-jp/files/latin-300-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -205,7 +205,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 400;
-      src: url(@fontsource/noto-sans-jp/files/latin-400-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-sans-jp/files/latin-400-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -215,7 +215,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 600;
-      src: url(@fontsource/noto-sans-jp/files/latin-600-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-sans-jp/files/latin-600-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -225,7 +225,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 300;
-      src: url(@fontsource/noto-serif-jp/files/latin-300-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-serif-jp/files/latin-300-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -235,7 +235,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 400;
-      src: url(@fontsource/noto-serif-jp/files/latin-400-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-serif-jp/files/latin-400-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -245,7 +245,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 600;
-      src: url(@fontsource/noto-serif-jp/files/latin-600-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-serif-jp/files/latin-600-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -255,7 +255,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 900;
-      src: url(@fontsource/noto-serif-jp/files/latin-900-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/noto-serif-jp/files/latin-900-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
@@ -265,7 +265,7 @@ const productSchema = isProductPage ? {
       font-style: normal;
       font-display: swap;
       font-weight: 400;
-      src: url(@fontsource/yuji-syuku/files/latin-400-normal.woff2) format('woff2');
+      src: url(/node_modules/@fontsource/yuji-syuku/files/latin-400-normal.woff2) format('woff2');
       unicode-range: U+0021-007E, U+00A3;
     }
 
