--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -7,13 +7,23 @@ import '@fontsource/noto-serif-jp/400.css';
 import '@fontsource/noto-serif-jp/600.css';
 import '@fontsource/noto-serif-jp/900.css';
 import '@fontsource/yuji-syuku';
+
+import notoSans300Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-300-normal.woff2?url';
+import notoSans400Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-400-normal.woff2?url';
+import notoSans600Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-600-normal.woff2?url';
+import notoSerif300Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-300-normal.woff2?url';
+import notoSerif400Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-400-normal.woff2?url';
+import notoSerif600Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-600-normal.woff2?url';
+import notoSerif900Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-900-normal.woff2?url';
+import yujiSyuku400Woff2 from '@fontsource/yuji-syuku/files/yuji-syuku-latin-400-normal.woff2?url';
+
 import Header from './header/index.astro';
 import Footer from './footer/index.astro';
 import type { IShopAddressMap, IShoppingBagSidebarProp } from '@misc';
 import LoadingOverlay from './loading-overlay.astro';
 import ErrorMsgModal from './error-msg-modal.astro';
 import CollectionPointOnQtyIncrease from './collection-point-on-qty-increase.astro'
-import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, FM_IS_ONLINE } from 'astro:env/client'
+import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
 import type { IProductImages } from '@components/catalogue-item/interfaces';
 
 interface Props {
@@ -130,83 +140,6 @@ const productSchema = isProductPage ? {
     }
   ]
 } : {}
-
-const fontSrcPrefix = FM_IS_ONLINE === 'true' ? '/_astro' : '/node_modules/@fontsource'
-
-const fontCss = `
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 300;
-      src: url(${fontSrcPrefix}/noto-sans-jp/files/latin-300-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(${fontSrcPrefix}/noto-sans-jp/files/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 600;
-      src: url(${fontSrcPrefix}/noto-sans-jp/files/latin-600-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 300;
-      src: url(${fontSrcPrefix}/noto-serif-jp/files/latin-300-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(${fontSrcPrefix}/noto-serif-jp/files/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 600;
-      src: url(${fontSrcPrefix}/noto-serif-jp/files/latin-600-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 900;
-      src: url(${fontSrcPrefix}/noto-serif-jp/files/latin-900-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    @font-face {
-      font-family: 'Yuji Syuku';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(${fontSrcPrefix}/yuji-syuku/files/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-`
-
 ---
 
 <html lang="en-GB">
@@ -219,6 +152,15 @@ const fontCss = `
     <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768.avif`} as="image" type='image/avif' />
     <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768${preloadImageExt}`} as="image" type={`image/${preloadImageExt === '.jpg' ? 'jpeg' : preloadImageExt.replaceAll('.','')}`} />
   )}
+
+  <link rel="preload" as="font" type="font/woff2" href={notoSans300Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSans400Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSans600Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSerif300Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSerif400Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSerif600Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSerif900Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={yujiSyuku400Woff2} crossorigin="anonymous" />
 
   <script src="../../ws.ts"></script>
 
@@ -263,8 +205,6 @@ const fontCss = `
   {isProductPage && <script type="application/ld+json" set:html={JSON.stringify(productSchema)} />}
 
   <meta name="theme-color" content="#ffffff">
-
-  <style set:html={fontCss} />
 
   <style is:global>
     /* noto-sans-jp-latin-300-normal */
