--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -1,21 +1,21 @@
 ---
-// import '@fontsource/noto-sans-jp/300.css';
-// import '@fontsource/noto-sans-jp/400.css';
-// import '@fontsource/noto-sans-jp/600.css';
-// import '@fontsource/noto-serif-jp/300.css';
-// import '@fontsource/noto-serif-jp/400.css';
-// import '@fontsource/noto-serif-jp/600.css';
-// import '@fontsource/noto-serif-jp/900.css';
-// import '@fontsource/yuji-syuku';
+import '@fontsource/noto-sans-jp/300.css';
+import '@fontsource/noto-sans-jp/400.css';
+import '@fontsource/noto-sans-jp/600.css';
+import '@fontsource/noto-serif-jp/300.css';
+import '@fontsource/noto-serif-jp/400.css';
+import '@fontsource/noto-serif-jp/600.css';
+import '@fontsource/noto-serif-jp/900.css';
+import '@fontsource/yuji-syuku';
 
-// import notoSans300Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-300-normal.woff2?url';
-// import notoSans400Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-400-normal.woff2?url';
-// import notoSans600Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-600-normal.woff2?url';
-// import notoSerif300Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-300-normal.woff2?url';
-// import notoSerif400Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-400-normal.woff2?url';
-// import notoSerif600Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-600-normal.woff2?url';
-// import notoSerif900Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-900-normal.woff2?url';
-// import yujiSyuku400Woff2 from '@fontsource/yuji-syuku/files/yuji-syuku-latin-400-normal.woff2?url';
+import notoSans300Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-300-normal.woff2?url';
+import notoSans400Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-400-normal.woff2?url';
+import notoSans600Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-600-normal.woff2?url';
+import notoSerif300Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-300-normal.woff2?url';
+import notoSerif400Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-400-normal.woff2?url';
+import notoSerif600Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-600-normal.woff2?url';
+import notoSerif900Woff2 from '@fontsource/noto-serif-jp/files/noto-serif-jp-latin-900-normal.woff2?url';
+import yujiSyuku400Woff2 from '@fontsource/yuji-syuku/files/yuji-syuku-latin-400-normal.woff2?url';
 
 import Header from './header/index.astro';
 import Footer from './footer/index.astro';
@@ -76,7 +76,7 @@ const {
   preloadImageExt = '',
 } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
-const isTrackOrderPage = Astro.url.pathname === '/track-order'
+// const isTrackOrderPage = Astro.url.pathname === '/track-order'
 
 const shopNameMap = Object.values(shopAddressMap).map(e=>({[e.id]:e.name})).reduce((a,b)=>({...a,...b}),{})
 
@@ -140,6 +140,82 @@ const productSchema = isProductPage ? {
     }
   ]
 } : {}
+
+const fontCss = `
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 300;
+      src: url(${notoSans300Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(${notoSans400Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Sans JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 600;
+      src: url(${notoSans600Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 300;
+      src: url(${notoSerif300Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(${notoSerif400Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 600;
+      src: url(${notoSerif600Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    @font-face {
+      font-family: 'Noto Serif JP';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 900;
+      src: url(${notoSerif900Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+
+    /* yuji-syuku-latin-400-normal */
+    @font-face {
+      font-family: 'Yuji Syuku';
+      font-style: normal;
+      font-display: swap;
+      font-weight: 400;
+      src: url(${yujiSyuku400Woff2}) format('woff2');
+      unicode-range: U+0021-007E, U+00A3;
+    }
+`
+
 ---
 
 <html lang="en-GB">
@@ -153,14 +229,14 @@ const productSchema = isProductPage ? {
     <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768${preloadImageExt}`} as="image" type={`image/${preloadImageExt === '.jpg' ? 'jpeg' : preloadImageExt.replaceAll('.','')}`} />
   )}
 
-  <!-- <link rel="preload" as="font" type="font/woff2" href={notoSans300Woff2} crossorigin="anonymous" />
+  <link rel="preload" as="font" type="font/woff2" href={notoSans300Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSans400Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSans600Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSerif300Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSerif400Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSerif600Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSerif900Woff2} crossorigin="anonymous" />
-  <link rel="preload" as="font" type="font/woff2" href={yujiSyuku400Woff2} crossorigin="anonymous" /> -->
+  <link rel="preload" as="font" type="font/woff2" href={yujiSyuku400Woff2} crossorigin="anonymous" />
 
   <script src="../../ws.ts"></script>
 
@@ -206,87 +282,9 @@ const productSchema = isProductPage ? {
 
   <meta name="theme-color" content="#ffffff">
 
+  <style set:html={fontCss} />
+
   <style is:global>
-    /* noto-sans-jp-latin-300-normal */
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 300;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-sans-jp@latest/latin-300-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-sans-jp-latin-400-normal */
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-sans-jp@latest/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-sans-jp-latin-600-normal */
-    @font-face {
-      font-family: 'Noto Sans JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 600;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-sans-jp@latest/latin-600-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-serif-jp-latin-300-normal */
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 300;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-serif-jp@latest/latin-300-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-serif-jp-latin-400-normal */
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-serif-jp@latest/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-serif-jp-latin-600-normal */
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 600;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-serif-jp@latest/latin-600-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* noto-serif-jp-latin-900-normal */
-    @font-face {
-      font-family: 'Noto Serif JP';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 900;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-serif-jp@latest/latin-900-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
-    /* yuji-syuku-latin-400-normal */
-    @font-face {
-      font-family: 'Yuji Syuku';
-      font-style: normal;
-      font-display: swap;
-      font-weight: 400;
-      src: url(https://cdn.jsdelivr.net/fontsource/fonts/yuji-syuku@latest/latin-400-normal.woff2) format('woff2');
-      unicode-range: U+0021-007E, U+00A3;
-    }
-
     .hide-scrollbar {
       scrollbar-width: none;
     }
