--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -1,12 +1,12 @@
 ---
-import '@fontsource/noto-sans-jp/300.css';
-import '@fontsource/noto-sans-jp/400.css';
-import '@fontsource/noto-sans-jp/600.css';
-import '@fontsource/noto-serif-jp/300.css';
-import '@fontsource/noto-serif-jp/400.css';
-import '@fontsource/noto-serif-jp/600.css';
-import '@fontsource/noto-serif-jp/900.css';
-import '@fontsource/yuji-syuku';
+// import '@fontsource/noto-sans-jp/300.css';
+// import '@fontsource/noto-sans-jp/400.css';
+// import '@fontsource/noto-sans-jp/600.css';
+// import '@fontsource/noto-serif-jp/300.css';
+// import '@fontsource/noto-serif-jp/400.css';
+// import '@fontsource/noto-serif-jp/600.css';
+// import '@fontsource/noto-serif-jp/900.css';
+// import '@fontsource/yuji-syuku';
 
 import notoSans300Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-300-normal.woff2?url';
 import notoSans400Woff2 from '@fontsource/noto-sans-jp/files/noto-sans-jp-latin-400-normal.woff2?url';
