--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -67,6 +67,7 @@ const {
   preloadImageExt = '',
 } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
+const isHomePage = Astro.url.pathname === '/'
 // const isTrackOrderPage = Astro.url.pathname === '/track-order'
 
 const shopNameMap = Object.values(shopAddressMap).map(e=>({[e.id]:e.name})).reduce((a,b)=>({...a,...b}),{})
@@ -346,6 +347,7 @@ const fontCss = `
   data-has-items={cartHasItems ? '1' : '0'}
   class={`${isCheckoutPage ? 'bg-gray-100' : 'bg-white'} text-gray-900 flex flex-col min-h-screen overflow-x-hidden`}
   data-member-total={total}
+  data-resize-at-launch={(isHomePage || isProductPage) ? '0' : '1'}
 >
   <svg style="display: none;">
     <symbol id="loading-small" viewBox="0 -960 960 960">
@@ -472,7 +474,9 @@ reloadBC.onmessage = (ev:MessageEvent<string>) => ev.data !== pageToken.get() &&
 document.addEventListener('DOMContentLoaded',showBarcodesOnLoad,true)
 document.addEventListener(HEADER_TEXT_CAROUSEL_LOADED,resize,true)
 window.addEventListener('resize',onResize,true)
-window.addEventListener('load',resize,{once:true})
+
+const resizeAtLaunch = document.body.dataset.resizeAtLaunch === '1'
+if (resizeAtLaunch) window.addEventListener('load',resize,{once:true});
 window.addEventListener('beforeunload',collapseSidebarsBeforeUnload)
 
 window.onloadTurnstileCallback = () => {
