--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -223,7 +223,7 @@ const fontCss = `
       <link rel="dns-prefetch" href={PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}>
     </>}
     <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768.avif`} as="image" type='image/avif' />
-    // <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768${preloadImageExt}`} as="image" type={`image/${preloadImageExt === '.jpg' ? 'jpeg' : preloadImageExt.replaceAll('.','')}`} />
+    {/* <link rel="preload" href={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${preloadImageFilename}_768x768${preloadImageExt}`} as="image" type={`image/${preloadImageExt === '.jpg' ? 'jpeg' : preloadImageExt.replaceAll('.','')}`} /> */}
   </>}
 
   <link rel="preload" as="font" type="font/woff2" href={notoSans300Woff2} crossorigin="anonymous" />
