--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -216,7 +216,8 @@ const fontCss = `
 
   <link rel="preconnect" href="https://challenges.cloudflare.com" crossorigin>
 
-  <link rel="preload" href="/cdn-cgi/zaraz/i.js" as="script">
+  <!-- <link rel="preload" href="/cdn-cgi/zaraz/i.js" as="script"> 
+  <script src="/cdn-cgi/zaraz/i.js" referrerpolicy="origin" async></script> -->
 
   {!!preloadImageFilename && !!preloadImageExt && <>
     {FM_IS_ONLINE === 'true' && <>
@@ -235,8 +236,6 @@ const fontCss = `
   <link rel="preload" as="font" type="font/woff2" href={notoSerif600Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={notoSerif900Woff2} crossorigin="anonymous" />
   <link rel="preload" as="font" type="font/woff2" href={yujiSyuku400Woff2} crossorigin="anonymous" />
-
-  <script src="/cdn-cgi/zaraz/i.js" referrerpolicy="origin" async></script>
 
   <script src="../../ws.ts"></script>
   
